trabsaction swagger update
